# django_pg_set

./: .gitignore  Dockerfile.test  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test-matrix.sh
.github/workflows/: ci.yml  publish.yml  test.yml
src/pg_set_django/: __init__.py  core.py
tests/: django_settings.py  test_core.py
